--- a/css/style.css
+++ b/css/style.css
@@ -77,3 +77,10 @@ a {
 	text-decoration: none;
 	text-shadow: 1px 2px 3px black;
 }
+
+@media only screen and (max-width: 768px) {
+	#display {
+		max-width: 60%;
+		margin-left: 20%;
+	}
+}
